--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -2,10 +2,10 @@
 @import "./miniprogram_npm/weui-miniprogram/weui-wxss/dist/style/weui.wxss";
 @import "./fonts/nanum.wxss";
 
-/* page {
+page {
   height: 100%;
-  font-family: 'Nanum Gothic Coding', monospace;
-} */
+  /* font-family: 'Nanum Gothic Coding', monospace; */
+}
 
 .container {
   display: flex;
